Added Base Observer class

--- a/Minigin/Minigin.vcxproj
+++ b/Minigin/Minigin.vcxproj
@@ -196,8 +196,10 @@ xcopy "$(SolutionDir)3rdParty\SDL2_ttf\lib\x64\*.dll" "$(OutputPath)" /R /Y</Com
     <ClInclude Include="Engine\Components\BaseComponent.h" />
     <ClInclude Include="Engine\Components\Components.h" />
     <ClInclude Include="Engine\Graphics\Font.h" />
+    <ClInclude Include="Engine\Helpers\AchievmentSystem.h" />
     <ClInclude Include="Engine\Helpers\Command.h" />
     <ClInclude Include="Engine\Helpers\FixedSizeAllocator.h" />
+    <ClInclude Include="Engine\Helpers\Observer.h" />
     <ClInclude Include="Engine\Scene\GameObject.h" />
     <ClInclude Include="Engine\Managers\InputManager.h" />
     <ClInclude Include="Engine\Core\Minigin.h" />
