Implement Box2D for Physics and Triggers(Collision)

--- a/Minigin/Minigin.vcxproj
+++ b/Minigin/Minigin.vcxproj
@@ -244,6 +244,8 @@ xcopy "$(SolutionDir)3rdParty\SDL2_mixer\lib\x64\*.dll" "$(OutputPath)" /R /Y</C
     <ClInclude Include="Engine\Components\FPSComponent.h" />
     <ClInclude Include="Engine\Helpers\Logger.h" />
     <ClInclude Include="Engine\Managers\SoundManager.h" />
+    <ClInclude Include="Engine\Managers\PhysicsManager.h" />
+    <ClInclude Include="Engine\Components\PhysicsComponent.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine\Components\AnimatedRenderComponent.cpp" />
@@ -272,6 +274,8 @@ xcopy "$(SolutionDir)3rdParty\SDL2_mixer\lib\x64\*.dll" "$(OutputPath)" /R /Y</C
     <ClCompile Include="Engine\Components\FPSComponent.cpp" />
     <ClCompile Include="Engine\Helpers\Logger.cpp" />
     <ClCompile Include="Engine\Managers\SoundManager.cpp" />
+    <ClCompile Include="Engine\Managers\PhysicsManager.cpp" />
+    <ClCompile Include="Engine\Components\PhysicsComponent.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
